// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders h1 1`] = `
<DocumentFragment>
  <h1>
    Text
  </h1>
</DocumentFragment>
`;

exports[`Header renders h2 1`] = `
<DocumentFragment>
  <h2>
    Text
  </h2>
</DocumentFragment>
`;

exports[`Header renders h3 1`] = `
<DocumentFragment>
  <h3>
    Text
  </h3>
</DocumentFragment>
`;

exports[`Header renders h4 1`] = `
<DocumentFragment>
  <h4>
    Text
  </h4>
</DocumentFragment>
`;

exports[`Header renders h5 1`] = `
<DocumentFragment>
  <h5>
    Text
  </h5>
</DocumentFragment>
`;

exports[`Header renders h6 1`] = `
<DocumentFragment>
  <h6>
    Text
  </h6>
</DocumentFragment>
`;
